<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.zelyder.physics.Fragments.KeyboardOptics">

    <ImageButton
        android:id="@+id/btnOpticsDelete"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="0"
        android:layout_row="0"
        android:background="@drawable/ripple_button"
        android:contentDescription="@string/descriptionBtnDelete"
        app:srcCompat="@drawable/ic_delete" />
    <Button
        android:id="@+id/btnOpticsPlus"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="1"
        android:layout_row="0"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/plus"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsDelta"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="2"
        android:layout_row="0"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/delta"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <ImageButton
        android:id="@+id/btnOpticsOk"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="3"
        android:layout_row="0"
        android:background="@drawable/ripple_ok_button"
        app:srcCompat="@drawable/ic_check_black_24dp"
        android:contentDescription="@string/descriptionBtnOk" />
    <Button
        android:id="@+id/btnOpticsRefIndex"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="0"
        android:layout_row="1"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/concentration"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsSpeedOfLight"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="1"
        android:layout_row="1"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/specific_heat"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsSpeed"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="2"
        android:layout_row="1"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/speed"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsOne"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="3"
        android:layout_row="1"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/one"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsD"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="0"
        android:layout_row="2"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/D"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsFocalLength"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="1"
        android:layout_row="2"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/Force"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsDisI"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="2"
        android:layout_row="2"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/f"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsTwo"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="3"
        android:layout_row="2"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/two"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsDisS"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="0"
        android:layout_row="3"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/diameter"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsGamma"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="1"
        android:layout_row="3"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/gamma"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsSizeI"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="2"
        android:layout_row="3"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/H"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsSin_phi"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="3"
        android:layout_row="3"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/sin_phi"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsSizeS"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="0"
        android:layout_row="4"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/height"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsK"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="1"
        android:layout_row="4"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/k"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsLambda"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="2"
        android:layout_row="4"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/lambda"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsBigOmega"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="3"
        android:layout_row="4"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/BigOmega"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnOpticsL"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_column="0"
        android:layout_row="5"
        android:background="@drawable/ripple_button"
        android:fontFamily="serif"
        android:text="@string/L"
        android:textAllCaps="false"
        android:textSize="24sp" />

</GridLayout>
